- fixes update order - fixes docker-compose.yaml - tabella PaymentStatus.php

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,5 @@
 version: '3.8'
 services:
-
     # Application
     app:
         build:
@@ -11,6 +10,8 @@ services:
             - ./:/var/www
         depends_on:
             - "database"
+        networks:
+          - app-network
     # Web Server
     web:
         build:
@@ -23,14 +24,18 @@ services:
             - "app"
         ports:
             - 80:80
+        networks:
+          - app-network
     # Database
     database:
-        image: arm64v8/mysql:oracle
+#        image: arm64v8/mysql:oracle
+        image: mysql:8.0.25
+        platform: linux/amd64
         command: --default-authentication-plugin=mysql_native_password
         restart: always
         volumes:
             - dbdata:/var/lib/mysql
-#            - ./docker/my.cnf:/etc/mysql/my.cnf
+            - ./docker/my.cnf:/etc/my.cnf
         environment:
             MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
             MYSQL_DATABASE: ${DB_DATABASE}
@@ -38,6 +43,8 @@ services:
             MYSQL_PASSWORD: ${DB_PASSWORD}
         ports:
           - ${FORWARD_DB_PORT:-3306}:3306
+        networks:
+          - app-network
     # Database management
     pma:
         image: phpmyadmin:5.1
@@ -62,3 +69,7 @@ services:
 
 volumes:
     dbdata:
+
+networks:
+  app-network:
+    driver: bridge
